# venue-intel

./: .gitignore  pyproject.toml  requirements.txt
.streamlit/: config.toml  secrets.toml.example
app/: README.md  venue_intel_app.py
config/: auth.yaml.example
docs/: PROJECT-REVIEW.md  PROJECT.md  costed-data-plan.md  data-freshness.md  mvp-ui.md  relevance-rubric.md  subscription-model.md
legal/: privacy-policy.md  terms-of-service.md
src/venue_intel/: __init__.py  export.py  fetch.py  import_historical.py  lookalike.py  models.py  pipeline.py  scoring.py  storage.py
